fix: 쿠폰 할인 기능 로직 수정 및 주문 프로세스 개선